# second-interview

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  二面题目-device_safety_agent.md
config/: llm_config.json  memory_config.json  safety_rules.json
docs/: index.md
knowledge/: device_overview.md  forbidden_actions.md  safety_rules.md  troubleshooting.md
plan/: initial_solution.md
runs/: trace-20260624-184600-07fcc323.json  trace-20260624-184600-0bc68711.json  trace-20260624-184600-6d04cb9a.json  trace-20260624-184600-7e1bdb92.json  trace-20260624-184600-dcac96b5.json  trace-20260624-184601-00166914.json  trace-20260624-184601-6ae79ca9.json  trace-20260624-184601-6e6f5090.json  trace-20260624-184601-ceb9ae96.json  trace-20260624-184601-d7335546.json  trace-20260624-184636-62dc31eb.json  trace-20260624-184637-13b2dfbc.json  trace-20260624-184637-15bd9a92.json  trace-20260624-184637-4f21ee12.json  trace-20260624-184637-7fec4d6f.json  trace-20260624-184637-9338645a.json  trace-20260624-184637-a2534b97.json  trace-20260624-184637-c9db61f9.json  trace-20260624-184637-d6fb63ef.json  trace-20260624-184637-f588df53.json  trace-20260624-184736-acba4cf4.json  trace-20260624-184756-060a62d8.json  trace-20260624-184756-0fa0fb2e.json  trace-20260624-184756-462fdc2a.json  trace-20260624-184756-49bd3797.json  trace-20260624-184756-7ea8e514.json  trace-20260624-184756-8ace781c.json  trace-20260624-184756-be42cead.json  trace-20260624-184756-c415eb38.json  trace-20260624-184756-c815651d.json  (+67 more)
tests/: test_approval.py  (+10 more)
(+19 files in other folders)
